--- a/app/views/doctors/show.html.erb
+++ b/app/views/doctors/show.html.erb
@@ -17,10 +17,10 @@
 	      Type: <%= @doctor.ph_type %> 
 	      Bills?: <%= @doctor.bills %>
 	      Phone: <%= @doctor.phone %>
+	      Mobile: <%= @doctor.mobile %>
 	      Email: <%= @doctor.email %>
 	      Addr: <%= @doctor.address %>
-		    <%= @doctor.city %> <%= @doctor.prov %> 
-		    <%= @doctor.postal %>
+		    <%= @doctor.city %> <%= @doctor.prov %> <%= @doctor.postal %>
 	      Office: <%= @doctor.office %>
            </pre>
       </h1>
