--- a/app/views/patients/_form.html.erb
+++ b/app/views/patients/_form.html.erb
@@ -1,62 +1,64 @@
 <%= form_for (@patient) do |f| %>
   <%= render 'shared/error_messages', object: f.object %>
 
+<div class="row">
+  <div class="col-md-12 col-md-offset-1">
+
   <%= f.label 'H Card', class: "col-md-1 control-label" %>
   <div class="col-md-2 padding-0">
   <%= f.text_field :ohip_num %>
   </div>
 
-  <%= f.label 'Ver', class: "col-md-1 control-label" %>
   <div class="col-md-1">
   <%= f.text_field :ohip_ver %>
+  </div>
+  
+  <%= f.label 'Prov', class: "col-md-1 control-label" %>
+  <div class="col-md-1">
+  <%= f.select :hin_prov, $provinces %>
   </div>
   
   <%= f.label 'Expires', class: "col-md-1 control-label" %>
   <div class="col-md-2">
   <%= f.date_field :hin_expiry, start_year: Date.today.year, end_year: Date.today.year+5 %>
   </div>
-  
-  <%= f.label :Sex, class: "col-md-1 control-label" %>
-  <div class="col-md-2">
-  <%= f.select(:sex, $sexes ) %>
-  </div>
 
   <div class="col-md-12"> &nbsp; </div>
 
   <%= f.label 'Last Name', class: "col-md-1 control-label" %>
-  <div class="col-md-3 padding-0">
+  <div class="col-md-2 padding-0">
   <%= f.text_field :lname %>
   </div>
 
   <%= f.label :'First Name', class: "col-md-1 control-label" %>
-  <div class="col-md-3">
+  <div class="col-md-2">
   <%= f.text_field :fname %>
   </div>
+
+  <%= f.label :Sex, class: "col-md-1 control-label" %>
+  <div class="col-md-2">
+  <%= f.select(:sex, $sexes ) %>
+  </div>
+  
+  <div class="col-md-12"> &nbsp; </div>
 
   <%= f.label :"DOB", class: "col-md-1 control-label" %>
   <div class="col-md-2">
 	  <%= f.date_field :dob, class: "datepicker", start_year: 1900, end_year: Date.today.year %>
   </div>
 
+  <%= f.label :Phone, class: "col-md-1 control-label" %>
+  <div class="col-md-2 padding-0">
+	  <%= f.phone_field :phone, value: number_to_phone(@patient.phone)  %>
+  </div>
+  
+  <%= f.label :Mobile, class: "col-md-1 control-label" %>
+  <div class="col-md-2">
+  <%= f.phone_field :mobile, value: number_to_phone(@patient.mobile) %>
+  </div>
+  
   <div class="col-md-12"> &nbsp; </div>
 
-  <%= f.label :'Phone', class: "col-md-1 control-label" %>
-  <div class="col-md-2 padding-0">
-  <%= f.text_field :phone %>
-  </div>
-  
-  <%= f.label :'Mobile', class: "col-md-1 control-label" %>
-  <div class="col-md-3">
-  <%= f.text_field :mobile %>
-  </div>
-  
-  <%= f.label :'Alt Contact', class: "col-md-2 control-label" %>
-  <div class="col-md-2">
-  <%= f.text_field :alt_contact_name %>
-  </div>
-  
-  <div class="col-md-12"> &nbsp; </div>
-  
   <%= f.label :Address, class: "col-md-1 control-label" %>
   <div class="col-md-3 padding-0">
   <%= f.text_field :addr %>
@@ -64,16 +66,15 @@
 
   <%= f.label :City, class: "col-md-1 control-label" %>
   <div class="col-md-2 padding-0">
-  <%= f.text_field :city %>
+  <%= f.text_field :city, class: "padding-0" %>
   </div>
   
   <div class="col-md-1">
   <%= f.select(:prov, $provinces ) %>
   </div>
 
-  <%= f.label :Postal, class: "col-sm-1 control-label" %>
-  <div class="col-md-2">
-  <%= f.text_field :postal %>
+  <div class="col-md-1">
+  <%= f.text_field :postal, placeholder: 'Postal'%>
   </div>
 
   <div class="col-md-12"> &nbsp; </div>
@@ -84,52 +85,35 @@
   </div>
   
   <%= f.label :pharmacy, class: "col-md-2 control-label" %>
-  <div class="col-md-2 padding-0">
+  <div class="col-md-4">
   <%= f.text_field :pharmacy %>
   </div>
   
-  <%= f.label :pharmacy_phone, class: "col-md-2 control-label" %>
-  <div class="col-md-2">
-  <%= f.text_field :pharm_phone %>
-  </div>
-
   <div class="col-md-12"> &nbsp; </div>
 
-  <div class="col-md-11">
+  <%= f.label :pharm_phone, class: "col-md-1 control-label" %>
+  <div class="col-md-2">
+  <%= f.phone_field :pharm_phone, value: number_to_phone(@patient.pharm_phone) %>
+  </div>
+  
+  <%= f.label :'Alt Contact', class: "col-md-1 control-label" %>
+  <div class="col-md-2">
+  <%= f.text_field :alt_contact_name %>
+  </div>
+
+  <%= f.label :email, class: "col-md-1 control-label" %>
+  <div class="col-md-2">
+  <%= f.text_field :email %>
+  </div>
+
+  <div class="col-md-13"> &nbsp; </div>
+
+  <div class="col-md-9">
   <%= f.submit yield(:button_text), class: "btn btn-primary" %>
   </div>
 
+  </div>
+</div>
 <% end %>
 
 
-<!--
-	<script>
-document.onkeypress = function(e) {
-    e = e || window.event;
-    var charCode = (typeof e.which == "number") ? e.which : e.keyCode;
-    // store it , in this example, i use localstorage
-    if(localStorage.getItem("ohip_num") && localStorage.getItem("ohip_num") != 'null') {
-        // append on every keypress
-        localStorage.setItem("ohip_num", localStorage.getItem("ohip_num") + String.fromCharCode(charCode));
-    } else {
-        // remove localstorage if it takes 300 ms (you can set it)
-        localStorage.setItem("ohip_num", String.fromCharCode(charCode));
-        setTimeout(function() {
-            localStorage.removeItem("ohip_num");
-        }, 300);
-    }
-    // when reach on certain length within 300 ms, it is not typed by a human being
-    if(localStorage.getItem("ohip_num").length == 8) {
-        // do some validation
-	    echo ("equals 8");
-       // if(passedonvalidation){
-            // do some action
-
-       // }
-    } else {
-	    echo ("not 8")
-    }
-    }
-	</script>
-
-	-->
