assets and card swipe

--- a/app/views/patients/_form.html.erb
+++ b/app/views/patients/_form.html.erb
@@ -109,7 +109,7 @@
   <div class="col-md-13"> &nbsp; </div>
 
   <div class="col-md-9">
-  <%= f.submit yield(:button_text), class: "btn btn-primary" %>
+  <%= f.submit "Create Patient's Record", class: "btn btn-primary" %>
   </div>
 
   </div>
