--- a/app/views/patients/_patient.html.erb
+++ b/app/views/patients/_patient.html.erb
@@ -1,5 +1,5 @@
     <tr>
-	<td><%= link_to "#{patient.lname}, #{patient.fname}", patient %> </td>
+	<td><%= link_to "#{patient.full_name}", patient %> </td>
 	<td><%= patient.sex %></td> 
 	<td><%= patient.last_visit_date %> </td> 
 	<td><%= patient.age %></td>
