--- a/app/views/patients/new.html.erb
+++ b/app/views/patients/new.html.erb
@@ -1,5 +1,5 @@
-<% provide(:title, 'Sign up') %>
-<% provide(:button_text, 'Create my account') %>
+<% provide(:title, 'New Patient') %>
+<% provide(:button_text, "Save Patient's record") %>
 <h1>Sign up</h1>
 
     <%= render 'form' %>
