--- a/app/views/visits/show.html.erb
+++ b/app/views/visits/show.html.erb
@@ -17,7 +17,7 @@
   		Duration: <%= @visit.duration %> minutes
 		Status: <%= @visit.status_str %> 
   		Entry by: <%= @visit.entry_by %>
-  		Entered at: <%= @visit.entry_ts.in_time_zone %>
+  		Entered at: <%= @visit.entry_ts %>
 		Notes: <%= @visit.notes %>	     
            </pre>
       </h1>
@@ -29,7 +29,7 @@
 <% end %>
 
     <p>
-    <%= button_to "Print Visit Form", visitform_patient_visit_path(@visit), class: "btn btn-primary", method: 'get'  %>
+    <%= button_to "Print Visit Form", visitform_patient_visit_path(@patient), class: "btn btn-primary", method: 'get'  %>
   </aside>
 
 </div>
