--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -32,6 +32,7 @@
 <li><%= link_to "Patients", patients_path %></li>
 <li><%= link_to "Day Sheet", daysheet_index_path %></li>
 <li><%= link_to "Billing", billings_path %></li>
+<li><%= link_to "Reports", reports_index_path %></li>
 <li> <%= link_to "Log out", logout_path, method: :delete %> </li>
 
 <% if  current_user.admin?  %>
