--- a/app/views/visits/_form.html.erb
+++ b/app/views/visits/_form.html.erb
@@ -2,7 +2,7 @@
   <%= render 'shared/error_messages', object: f.object %>
 
   <% doc_id = @visit.doctor.id ||  current_doctor.id %>
-  <% @procedures = get_procedures %>
+  <% @procedures = get_active_procedures %>
 
 <div class="row">
   <div class="col-md-3 col-md-offset-1">
@@ -11,7 +11,7 @@
   <%= f.collection_select(:doc_id, get_active_doctors, :id, :lname, prompt: 'Select', selected: doc_id) %>  
 
   <%= f.label "Diagnosis" %>
-  <%=  f.collection_select(:diag_code, Diagnosis.all, :code, :code, prompt: 'Select')  %> 
+  <%=  f.collection_select(:diag_code, get_active_diagnoses, :code, :code, prompt: 'Select')  %> 
 
   <%= f.label "Duration" %>
   <%= f.select :duration, $durations, default: 10  %>
