--- a/app/views/billings/index.html.erb
+++ b/app/views/billings/index.html.erb
@@ -4,7 +4,7 @@
 <h1> Billings for <%= date.to_s %> (<%= @visits.count %>)</h1>
 
 <ul class="users">
-<table style="width:100%; padding: 10px;"> <!--class="table table-hover table-condensed" > -->
+<table style="width:90%; padding: 10px;"> <!--class="table table-hover table-condensed" > -->
   <thead>
       <tr>
 	  <th>Time</th>
@@ -21,8 +21,13 @@
   </thead>
   <tbody>
 	  <%= render partial: "visit", collection: @visits %>
+	  
   </tbody>
 </table>
 </ul>
 
 <%= will_paginate(@visits) %> 
+
+	  <div class="col-md-6 col-md-offset-2">
+	  <%= button_to "Export Payment File", billings_export_path, class: "btn btn-primary", method: 'post', params: {date: date}  %>
+	  </div>
