--- a/app/views/doctors/index.html.erb
+++ b/app/views/doctors/index.html.erb
@@ -32,7 +32,7 @@
 <% if  current_user.admin?  %>
     <section class="new_diag_code">
       <aside class="col-md-2">
-            <%= button_to "Add Doctor", new_doctor_path, class: "btn btn-primary", :method => "get" %>
+            <%= button_to "Add New Doctor", new_doctor_path, class: "btn btn-primary", :method => "get" %>
       </aside>
     </section>
 <% end %>
