--- a/app/views/patients/edit.html.erb
+++ b/app/views/patients/edit.html.erb
@@ -1,5 +1,5 @@
 <% provide(:title, 'Edit patient') %>
-<% provide(:button_text, 'Save changes') %>
+<% provide(:button_text, "Update Patient's Record") %>
 <h1><%= @patient.full_name  %> : patient's profile</h1>
 
 <%= render 'form' %>
