--- a/app/views/patients/show.html.erb
+++ b/app/views/patients/show.html.erb
@@ -7,21 +7,21 @@
     <section class="user_info">
       <h1>
 	   <pre>
-	      Name: <%= @patient.full_name %>
-	      DOB: <%= @patient.dob %> : <%= @patient.age %> y/o  <%= @patient.sex %>
-	      Health Card: <%= @patient.ohip_num %> <%= @patient.ohip_ver %> (<%= @patient.hin_prov %>) Expires: <%= @patient.hin_expiry %>
-	      Phone: <%= number_to_phone(@patient.phone) %>
-	      Mobile: <%= number_to_phone(@patient.mobile) %>
-	      Addr: <%= @patient.addr %>
+	<b>Name:</b> <%= @patient.full_name %>
+	<b>DOB:</b> <%= @patient.dob %> : <%= @patient.age %> y/o  <%= @patient.sex %>
+	<b>Health Card:</b> <%= @patient.ohip_num %> <%= @patient.ohip_ver %> (<%= @patient.hin_prov %>) <b>Expires:</b> <%= @patient.hin_expiry %>
+	<b>Phone:</b> <%= number_to_phone(@patient.phone) %>
+	<b>Mobile:</b> <%= number_to_phone(@patient.mobile) %>
+	<b>Address:</b> <%= @patient.addr %>
 		    <%= @patient.city %> <%= @patient.prov %> 
 		    <%= @patient.postal %>
 		    <%= @patient.country %>
-	      Family Doctor: Dr. <%= @patient.family_dr %>
-	      Pharmacy: <%= @patient.pharmacy %> : <%= number_to_phone(@patient.pharm_phone) %>
-	      Alt. Contact: <% @patient.alt_contact_name %> : <% @patient.alt_contact_phone %>
-	      Last Visit: <%= @patient.last_visit_date %>
-	      Created: <%= @patient.entry_date %>
-	      Last Mod By: <%= @patient.lastmod_by %>
+	<b>Family Doctor: </b> <%= @patient.family_dr %>
+	<b>Pharmacy:</b> <%= @patient.pharmacy %> : <%= number_to_phone(@patient.pharm_phone) %>
+	<b>Emergency Contact:</b> <% @patient.alt_contact_name %> <b> Phone: </b> <% @patient.alt_contact_phone %>
+	<b>Last Visit:</b> <%= @patient.last_visit_date %>
+	<b>Created:</b> <%= @patient.entry_date %>
+	<b>Last Modification By:</b> <%= @patient.lastmod_by %>
            </pre>
       </h1>
     </section>
