--- a/app/views/reports/index.html.erb
+++ b/app/views/reports/index.html.erb
@@ -1,2 +1,23 @@
-<h1>Reports#index</h1>
-<p>Find me in app/views/reports/index.html.erb</p>
+<h1>Reports</h1>
+
+<%= form_with do |f| %>
+
+<div class="row">
+  <div class="col-md-2 col-md-offset-2">
+  <%= f.label "Select Doctor" %>
+    <%= f.collection_select(:doc_id, get_active_doctors, :id, :lname, prompt: 'Select Doctor' ) %>
+  </div>
+
+  <div class="col-md-2">
+  <%= f.label "Select Time Frame" %>
+  <%= f.select :timeframe, $timeframes, placeholder: 'Select Time Frame' %>
+  </div>
+
+  <div class="col-md-8"></div>
+  <div class="col-md-4 col-md-offset-2">
+  <%= f.submit 'Generate Report', class: "btn btn-primary" %>
+  </div>
+<% end %>
+
+  </div>
+</div>
