--- a/app/views/visits/_visit.html.erb
+++ b/app/views/visits/_visit.html.erb
@@ -7,13 +7,11 @@
           <% end %> 
 	<% end %>
 
-  <span class="visit">Doctor: <%= visit.doctor.lname %></span>
-  <span class="visit">Diag. Code: <%= visit.diag_code %></span>
-  <span class="visit">Status: <%= visit.status %></span>
-  <span class="visit">Duration: <%= visit.duration %></span>
-  <span class="visit">Type: <%= visit.vis_type %></span>
-  <span class="visit">Entry by: <%= visit.entry_by %></span>
-  <span class="visit">Notes: <%= visit.notes %></span>
+	<span class="visit"><b>Doctor:</b> <%= visit.doctor.lname %></span>
+	<span class="visit"><b>Diagnosis:</b> <%= visit.diag_code %></span>
+	<span class="visit"><b>Status:</b> <%= $statuses.invert[visit.status] %></span>
+	<span class="visit"><b>Duration:</b> <%= visit.duration %> min</span>
+	<span class="visit"><b>Type:</b> <%= visit.vis_type %></span>
 </li>
 
 
