--- a/app/views/billings/index.html.erb
+++ b/app/views/billings/index.html.erb
@@ -4,7 +4,7 @@
 <h1> Billings for <%= date.to_s %> (<%= @visits.count %>)</h1>
 
 <ul class="users">
-<table style="width:90%; padding: 10px;"> <!--class="table table-hover table-condensed" > -->
+<table> <!--class="table table-hover table-condensed" > -->
   <thead>
       <tr>
 	  <th>Time</th>
