--- a/app/views/visits/index.html.erb
+++ b/app/views/visits/index.html.erb
@@ -1,7 +1,7 @@
 <% provide(:title, 'All visits') %>
 
 <ul class="users">
-<table style="width:100%; padding: 10px;" >
+<table >
   <thead>
       <tr>
           <th>Pat Id</th>
