--- a/app/views/daysheet/_visit.html.erb
+++ b/app/views/daysheet/_visit.html.erb
@@ -3,10 +3,17 @@
 <tr>
 	<td><%= link_to visit.entry_ts.strftime("%H:%M"), patient_visit_path(pat,visit) %> </td>
 	<td><%= link_to pat.full_name, pat %></td>
+	<td><%= pat.ohip_num %></td>
+	<td><%= pat.ohip_ver %></td>
 	<td><%= visit.doctor.lname %></td>
 	<td><%= visit.diag_code %></td>
 	<td><%= visit.proc_codes %></td>
-	<td><%= $statuses.invert[visit.status] rescue '' %></td>
-	<td><%= visit.notes.to_s.first(40)+ '..'  %></td>
+	<td><%= visit.units %></td>
+	<td><%= visit.vis_type %></td>
+	<td><%= VISIT_STATUSES.invert[visit.status] rescue '' %></td>
+	
+	<% if current_user.admin?  %>
+		<td> <%= link_to "delete", patient_visit_path(pat,visit), method: :delete, data: { confirm: "Are you sure you want to delete #{visit.entry_ts.strftime('%H:%M')}?" } %> </td>
+	<% end %>
 
 </tr>
