--- a/app/views/reports/index.html.erb
+++ b/app/views/reports/index.html.erb
@@ -6,7 +6,7 @@
 <p>
 
 <div id="page" class="col-md-8 col-md-offset-2">
-<table class="table table-hover table-condensed" > 
+	<table class="tbl table-hover">  <!--table table-hover table-condensed" >  -->
   <thead>
       <tr>
           <th>Name</th>
@@ -14,8 +14,7 @@
           <th>Type</th>
           <th>Sdate</th>
           <th>Edate</th>
-          <th>Year</th>
-          <th>Month</th>
+          <th></th>
       </tr>
   </thead>
   <tbody>
