--- a/app/views/visits/show.html.erb
+++ b/app/views/visits/show.html.erb
@@ -15,7 +15,7 @@
 		Procedure(s) : <%=  @visit.proc_codes %>
   		Type: <%= @visit.vis_type %>
   		Duration: <%= @visit.duration %> minutes
-		Status: <%= @visit.status_str %> 
+		Status: <%= VISIT_STATUSES.invert[@visit.status] %> 
   		Entry by: <%= @visit.entry_by %>
   		Entered at: <%= @visit.entry_ts %>
 		Notes: <%= @visit.notes %>	     
